--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,36 @@
 
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-        'Droid Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+        'Droid Sans', 'Helvetica Neue', sans-serif; */
+    font-family: 'Manrope', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+
+.dashboard-content {
+    position: absolute;
+    height: 100%;
+    width: calc(100% - 16.5rem);
+    left: 16.5rem;
+}
+
+@media (min-device-width: 480px) and (max-device-width: 800px) {
+    .dashboard-content {
+        position: absolute;
+        height: 100%;
+        width: calc(100% - 7.5rem);
+        left: 7.5rem;
+    }
+    .dashboard__content_shift {
+        position: absolute;
+        height: 100%;
+        width: calc(100% - 16.5rem);
+        left: 16.5rem;
+    }
 }
